[gd_scene load_steps=11 format=2]

[ext_resource path="res://textures/boss.png" type="Texture" id=1]
[ext_resource path="res://Boss.gd" type="Script" id=2]
[ext_resource path="res://DynFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://sfx/bomb.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/cut.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0263

[sub_resource type="Animation" id=2]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -105.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "load_next_level"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, -15.0 ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.109804, 1, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[node name="Boss" type="KinematicBody2D" groups=[
"boss",
]]
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "idle"
anims/die = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -255.0
margin_top = -13.0
margin_right = -6.0
margin_bottom = -4.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/HealthBar"]
margin_left = -115.0
margin_top = -12.0
margin_right = -5.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 3 )
text = "Boss Health"

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sfx"

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sfx"
